Correction padding on mobile

--- a/src/blocks/intro/__button/intro__button.css
+++ b/src/blocks/intro/__button/intro__button.css
@@ -10,3 +10,9 @@
   transform: translateX(-50%);
   margin: 2.125rem 0;
 }
+
+@media (max-width: 520px){
+  .intro__button{
+    margin: 2.125rem 0 0;
+  }
+}
